@@ -20,6 +20,7 @@ import java.io.IOException;
 import org.apache.lucene.search.Filter;
 import org.apache.lucene.search.DocIdSet;
 import org.apache.lucene.index.IndexReader;
+import org.apache.lucene.index.IndexReader.AtomicReaderContext;
 
 
 public class PythonFilter extends Filter {
@@ -46,6 +47,6 @@ public class PythonFilter extends Filter {
     }
 
     public native void pythonDecRef();
-    public native DocIdSet getDocIdSet(IndexReader reader)
+    public native DocIdSet getDocIdSet(AtomicReaderContext context)
         throws IOException;
 }
