@@ -16,6 +16,7 @@
 package org.apache.pylucene.store;
 
 import java.io.IOException;
+import java.util.Collection;
 
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.IndexInput;
@@ -28,6 +29,7 @@ public class PythonDirectory extends Directory {
     private long pythonObject;
 
     public PythonDirectory(LockFactory factory)
+        throws IOException
     {
         setLockFactory(factory);
     }
@@ -45,6 +47,13 @@ public class PythonDirectory extends Directory {
         throws Throwable
     {
         pythonDecRef();
+    }
+
+    public void sync(Collection<String> names)
+        throws IOException 
+    {
+        for (String name : names)
+            sync(name);
     }
 
     public native void pythonDecRef();
